testcases/phase3/check20/check20klmc-all.rc
structdef MYS {
    MYS* m;
    int x;
};

function : void main() {
    bool b = (bool)2;
    b = (bool)2.0;
    int **** x;
    bool[9] arr;
    b = (bool)x;
    MYS m;
    
    b = (bool)nullptr; // error
    b = (bool)m; // error
    m = (MYS)1; // error
    
    const int i1 = 1/((int)0.5); // arith error
    const int i2 = 1/((int)false); // arith error
    const int i3 = 1/((int)(bool)0); // arith error
    const int i4 = 1/(((int)(int*****)(bool)3)-1); // arith error
    
    int i;
    i = (int)x;
    i = (int)arr[5];
    i = (int)nullptr; // error
    
    const float f1 = 1/((float)(int)0.5); // arith error
    const float f2 = 1/((float)false); // arith error
    const float f3 = 1/((float)(bool)0); // arith error
    const float f4 = 1/(((float)(bool)3)-1); // arith error
    
    float f;
    f = (float)x;
    f = (float)arr[5];
    f = (float)nullptr; // error
    
    bool* y = (bool*)x;
    int* n = (int*)x;
}

typedef float FOO;
typedef FOO* FPTR;
typedef int* IPTR;
int x;
FOO y;
FPTR z;
int* intPtr;
function : int main1() {
    x = (int) y;
    x = (int) (x + 4.9);
    y = (FOO) (int) (65.3);
    intPtr = (IPTR) z;
    return 0;
}
